# esp-ble-jen

./: CMakeLists.txt  README.md  main.cpp
Files/: WifiSettings.txt
Include/: Add.h  Task.h  TaskManager.h  UartTask.h  UdpMulticast.h  WifiTask.h
Source/: Add.cpp  Task.cpp  TaskManager.cpp  UartTask.cpp  WifiTask.cpp
